--- a/pom.xml
+++ b/pom.xml
@@ -12,9 +12,7 @@
     <properties>
         <endorsed.dir>${project.build.directory}/endorsed</endorsed.dir>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <sonar.organization>juancondorijara</sonar.organization>
-        <sonar.host.url>https://sonarcloud.io</sonar.host.url>
-        <sonar.qualitygate.wait>false</sonar.qualitygate.wait>
+        <sonar.organization>juan-condori-jara</sonar.organization>
     </properties>
     
     <dependencies>
