--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,4 +10,4 @@ sonarcloud-check:
   script:
     - mvn verify sonar:sonar -Dsonar.projectKey=condorijara_GitLab_SonarCloud
   only:
-    - main
+    - GitLab_SonarCloud
